--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         h1 { font-size: 24px; }
         .clock { position: absolute; top: 10px; left: 10px; font-size: 16px; }
         .counter { position: absolute; top: 10px; right: 10px; font-size: 16px; }
+        .nav { background: #f8f8f8; padding: 10px; margin-bottom: 20px; }
+        .nav a { margin: 0 10px; text-decoration: none; color: #333; }
         .post { border-bottom: 1px solid #ddd; padding: 10px; margin: 10px auto; width: 90%; max-width: 600px; text-align: left; }
         .post h2 { font-size: 18px; margin: 0; }
         .post .content { display: none; white-space: pre-line; margin-top: 10px; }
@@ -17,19 +19,31 @@
         img { max-width: 100%; height: auto; display: block; margin: 10px auto; }
     </style>
 </head>
-<body oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;"> <!-- 禁止右键、选择、拖拽 -->
+<body oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
     <div class="clock" id="clock">时间加载中...</div>
     <div class="counter">访问量：<span id="viewCount">加载中...</span></div>
+
+    <!-- 分类导航 -->
+    <div class="nav">
+        <a href="#">小说-同人</a>
+        <a href="#">小说-原创</a>
+        <a href="#">画画-同人</a>
+        <a href="#">画画-原创</a>
+        <a href="#">画画-课程跟画</a>
+        <a href="#">画画-自设</a>
+        <a href="#">画画-稿件</a>
+        <a href="#">小说-稿件</a>
+        <a href="#">画画-水印</a>
+    </div>
+
     <h1>小狗创作中</h1>
 
     <h2>最新作品</h2>
     <div id="content">加载中...</div>
 
-    <!-- **底部邮箱** -->
     <div class="footer">联系方式：oloiyy@163.com</div>
 
     <script>
-        // **时钟**
         function updateClock() {
             const now = new Date();
             document.getElementById('clock').textContent = now.toLocaleTimeString();
@@ -37,12 +51,10 @@
         setInterval(updateClock, 1000);
         updateClock();
 
-        // **访问计数**
         if (!localStorage.viewCount) localStorage.viewCount = 0;
         localStorage.viewCount = parseInt(localStorage.viewCount) + 1;
         document.getElementById("viewCount").textContent = localStorage.viewCount;
 
-        // **获取 GitHub Issues 并处理图片**
         async function fetchIssues() {
             const username = "joinliving";
             const repo = "puppy";
@@ -63,8 +75,8 @@
 
                     const content = document.createElement("p");
                     content.classList.add("content");
-                    let bodyHtml = issue.body.replace(/\n/g, "<br>"); // 处理换行
-                    bodyHtml = bodyHtml.replace(/!\[.*?\]\((.*?)\)/g, '<img class="watermarked" src="$1">'); // 解析 Markdown 图片
+                    let bodyHtml = issue.body.replace(/\n/g, "<br>");
+                    bodyHtml = bodyHtml.replace(/!\[.*?\]\((.*?)\)/g, '<img class="watermarked" src="$1">');
 
                     content.innerHTML = bodyHtml;
 
@@ -86,43 +98,36 @@
                     contentDiv.appendChild(post);
                 });
 
-                // **所有图片加水印**
-                addWatermarkToImages();
+                setTimeout(addWatermarkToImages, 1000);
 
             } catch (error) {
                 document.getElementById("content").textContent = "加载失败，请检查 GitHub 配置";
             }
         }
 
-        // **前端水印处理**
         function addWatermarkToImages() {
             document.querySelectorAll(".watermarked").forEach(img => {
                 const canvas = document.createElement("canvas");
                 const ctx = canvas.getContext("2d");
 
                 img.onload = function () {
-                    canvas.width = img.width;
-                    canvas.height = img.height;
+                    canvas.width = img.naturalWidth;
+                    canvas.height = img.naturalHeight;
 
-                    // 画原图
                     ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
 
-                    // 设置水印样式
                     ctx.font = "20px Arial";
                     ctx.fillStyle = "rgba(255, 255, 255, 0.6)";
                     ctx.textAlign = "right";
 
-                    // 添加水印
                     ctx.fillText("山雀大王", canvas.width - 20, canvas.height - 50);
                     ctx.fillText("oloiyy@163.com", canvas.width - 20, canvas.height - 20);
 
-                    // 替换原图
                     img.src = canvas.toDataURL("image/png");
                 };
             });
         }
 
-        // **加载 Issues**
         fetchIssues();
     </script>
 </body>
