--- a/index.html
+++ b/index.html
@@ -5,21 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小狗创作中</title>
     <style>
-        body { font-family: Arial, sans-serif; background: #fff; text-align: center; margin: 0; padding: 20px; }
+        body { font-family: Arial, sans-serif; background: #fff; text-align: center; margin: 0; padding: 20px; position: relative; }
         h1 { font-size: 24px; }
         .clock { position: absolute; top: 10px; left: 10px; font-size: 16px; }
         .counter { position: absolute; top: 10px; right: 10px; font-size: 16px; }
-        .nav { background: #f8f8f8; padding: 10px; margin-bottom: 20px; }
-        .nav a { margin: 0 10px; text-decoration: none; color: #333; }
+
+        /* 优化的导航栏样式 */
+        .nav {
+            background: #333;
+            padding: 10px;
+            margin-bottom: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .nav a {
+            margin: 5px;
+            padding: 8px 12px;
+            text-decoration: none;
+            color: #fff;
+            background: #555;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .nav a:hover {
+            background: #777;
+        }
+
         .post { border-bottom: 1px solid #ddd; padding: 10px; margin: 10px auto; width: 90%; max-width: 600px; text-align: left; }
         .post h2 { font-size: 18px; margin: 0; }
         .post .content { display: none; white-space: pre-line; margin-top: 10px; }
         .post button { display: block; margin-top: 5px; }
         .footer { margin-top: 20px; font-size: 14px; color: gray; }
+
+        /* 水印层，防止截屏无水印 */
+        .watermark-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="100"><text x="10" y="50" font-size="20" fill="rgba(0,0,0,0.2)">山雀大王 - oloiyy@163.com</text></svg>');
+            background-repeat: repeat;
+            z-index: 9999;
+        }
+
         img { max-width: 100%; height: auto; display: block; margin: 10px auto; }
     </style>
 </head>
 <body oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
+    <div class="watermark-overlay"></div>  <!-- 水印层，防止截屏无水印 -->
+
     <div class="clock" id="clock">时间加载中...</div>
     <div class="counter">访问量：<span id="viewCount">加载中...</span></div>
 
