--- a/index.html
+++ b/index.html
@@ -5,63 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小狗创作中</title>
     <style>
-        body { font-family: Arial, sans-serif; background: #fff; text-align: center; margin: 0; padding: 20px; position: relative; }
+        body { 
+            font-family: 'Press Start 2P', cursive; 
+            background: #f4f4f4; 
+            text-align: center; 
+            margin: 0; 
+            padding: 20px;
+        }
         h1 { font-size: 24px; }
         .clock { position: absolute; top: 10px; left: 10px; font-size: 16px; }
         .counter { position: absolute; top: 10px; right: 10px; font-size: 16px; }
 
-        /* 优化的导航栏样式 */
-        .nav {
+        /* 右上角的 "Pages" 按钮 */
+        .menu-container {
+            position: absolute;
+            top: 10px;
+            right: 20px;
             background: #333;
-            padding: 10px;
-            margin-bottom: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .nav a {
-            margin: 5px;
-            padding: 8px 12px;
-            text-decoration: none;
-            color: #fff;
-            background: #555;
+            padding: 8px 15px;
             border-radius: 5px;
-            transition: 0.3s;
-        }
-        .nav a:hover {
-            background: #777;
+            color: #fff;
+            cursor: pointer;
+            user-select: none;
+            font-size: 14px;
         }
 
-        .post { border-bottom: 1px solid #ddd; padding: 10px; margin: 10px auto; width: 90%; max-width: 600px; text-align: left; }
+        /* 分类导航，默认隐藏 */
+        .nav {
+            display: none;
+            position: absolute;
+            top: 50px;
+            right: 20px;
+            background: #333;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: left;
+        }
+        .nav a {
+            display: block;
+            color: #fff;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-bottom: 1px solid #555;
+        }
+        .nav a:last-child { border-bottom: none; }
+        .nav a:hover { background: #555; }
+
+        .post {
+            border-bottom: 1px solid #ddd; 
+            padding: 10px; 
+            margin: 10px auto; 
+            width: 90%; 
+            max-width: 600px; 
+            text-align: left; 
+            background: white; 
+            border-radius: 5px;
+        }
         .post h2 { font-size: 18px; margin: 0; }
         .post .content { display: none; white-space: pre-line; margin-top: 10px; }
         .post button { display: block; margin-top: 5px; }
         .footer { margin-top: 20px; font-size: 14px; color: gray; }
 
-        /* 水印层，防止截屏无水印 */
-        .watermark-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="100"><text x="10" y="50" font-size="20" fill="rgba(0,0,0,0.2)">山雀大王 - oloiyy@163.com</text></svg>');
-            background-repeat: repeat;
-            z-index: 9999;
-        }
-
         img { max-width: 100%; height: auto; display: block; margin: 10px auto; }
+
     </style>
 </head>
 <body oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
-    <div class="watermark-overlay"></div>  <!-- 水印层，防止截屏无水印 -->
-
     <div class="clock" id="clock">时间加载中...</div>
     <div class="counter">访问量：<span id="viewCount">加载中...</span></div>
 
-    <!-- 分类导航 -->
-    <div class="nav">
+    <!-- 右上角 "Pages" 按钮 -->
+    <div class="menu-container" onclick="toggleNav()">Pages</div>
+
+    <!-- 隐藏的分类导航 -->
+    <div class="nav" id="navMenu">
         <a href="#">小说-同人</a>
         <a href="#">小说-原创</a>
         <a href="#">画画-同人</a>
@@ -91,6 +108,11 @@
         if (!localStorage.viewCount) localStorage.viewCount = 0;
         localStorage.viewCount = parseInt(localStorage.viewCount) + 1;
         document.getElementById("viewCount").textContent = localStorage.viewCount;
+
+        function toggleNav() {
+            const nav = document.getElementById("navMenu");
+            nav.style.display = (nav.style.display === "block") ? "none" : "block";
+        }
 
         async function fetchIssues() {
             const username = "joinliving";
