--- a/index.html
+++ b/index.html
@@ -5,89 +5,129 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小狗创作中</title>
     <style>
-        body { 
-            font-family: 'Press Start 2P', cursive; 
-            background: #f4f4f4; 
-            text-align: center; 
-            margin: 0; 
-            padding: 20px;
+        @font-face {
+            font-family: 'KingHwaOldSong';
+            src: url('KingHwaOldSong.ttf') format('truetype');
         }
-        h1 { font-size: 24px; }
-        .clock { position: absolute; top: 10px; left: 10px; font-size: 16px; }
-        .counter { position: absolute; top: 10px; right: 10px; font-size: 16px; }
-
-        /* 右上角的 "Pages" 按钮 */
-        .menu-container {
+        body {
+            font-family: 'KingHwaOldSong', Arial, sans-serif;
+            background: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+            position: relative;
+        }
+        h1 {
+            font-size: 24px;
+        }
+        .clock {
             position: absolute;
             top: 10px;
-            right: 20px;
-            background: #333;
-            padding: 8px 15px;
-            border-radius: 5px;
-            color: #fff;
-            cursor: pointer;
-            user-select: none;
-            font-size: 14px;
+            left: 10px;
+            font-size: 16px;
         }
-
-        /* 分类导航，默认隐藏 */
-        .nav {
-            display: none;
+        .counter {
             position: absolute;
-            top: 50px;
-            right: 20px;
+            top: 10px;
+            right: 10px;
+            font-size: 16px;
+        }
+        .nav {
             background: #333;
             padding: 10px;
-            border-radius: 5px;
-            text-align: left;
+            margin-top: 50px;
+            display: flex;
+            justify-content: center;
+            position: relative;
+        }
+        .nav > div {
+            position: relative;
+            margin: 0 10px;
         }
         .nav a {
-            display: block;
-            color: #fff;
+            margin: 5px;
+            padding: 8px 12px;
             text-decoration: none;
-            padding: 5px 10px;
-            border-bottom: 1px solid #555;
+            color: #fff;
+            background: #555;
+            border-radius: 5px;
+            transition: 0.3s;
+            display: block;
         }
-        .nav a:last-child { border-bottom: none; }
-        .nav a:hover { background: #555; }
-
-        .post {
-            border-bottom: 1px solid #ddd; 
-            padding: 10px; 
-            margin: 10px auto; 
-            width: 90%; 
-            max-width: 600px; 
-            text-align: left; 
-            background: white; 
+        .nav a:hover {
+            background: #777;
+        }
+        .sub-menu {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background: #444;
+            padding: 10px;
             border-radius: 5px;
         }
-        .post h2 { font-size: 18px; margin: 0; }
-        .post .content { display: none; white-space: pre-line; margin-top: 10px; }
-        .post button { display: block; margin-top: 5px; }
-        .footer { margin-top: 20px; font-size: 14px; color: gray; }
-
-        img { max-width: 100%; height: auto; display: block; margin: 10px auto; }
-
+        .nav > div:hover .sub-menu {
+            display: block;
+        }
+        .post {
+            border-bottom: 1px solid #ddd;
+            padding: 10px;
+            margin: 10px auto;
+            width: 90%;
+            max-width: 600px;
+            text-align: left;
+        }
+        .post h2 {
+            font-size: 18px;
+            margin: 0;
+        }
+        .post .content {
+            display: none;
+            white-space: pre-line;
+            margin-top: 10px;
+        }
+        .post button {
+            display: block;
+            margin-top: 5px;
+        }
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+            color: gray;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 10px auto;
+        }
     </style>
 </head>
 <body oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
     <div class="clock" id="clock">时间加载中...</div>
     <div class="counter">访问量：<span id="viewCount">加载中...</span></div>
 
-    <!-- 右上角 "Pages" 按钮 -->
-    <div class="menu-container" onclick="toggleNav()">Pages</div>
-
-    <!-- 隐藏的分类导航 -->
-    <div class="nav" id="navMenu">
-        <a href="#">小说-同人</a>
-        <a href="#">小说-原创</a>
-        <a href="#">画画-同人</a>
-        <a href="#">画画-原创</a>
-        <a href="#">画画-课程跟画</a>
-        <a href="#">画画-自设</a>
-        <a href="#">画画-稿件</a>
-        <a href="#">小说-稿件</a>
-        <a href="#">画画-水印</a>
+    <!-- 分类导航 -->
+    <div class="nav">
+        <div>
+            <a href="#">小说</a>
+            <div class="sub-menu">
+                <a href="#">同人</a>
+                <a href="#">原创</a>
+                <a href="#">稿件</a>
+            </div>
+        </div>
+        <div>
+            <a href="#">画画</a>
+            <div class="sub-menu">
+                <a href="#">同人</a>
+                <a href="#">原创</a>
+                <a href="#">课程跟画</a>
+                <a href="#">自设</a>
+                <a href="#">稿件</a>
+                <a href="#">水印</a>
+            </div>
+        </div>
     </div>
 
     <h1>小狗创作中</h1>
@@ -108,11 +148,6 @@
         if (!localStorage.viewCount) localStorage.viewCount = 0;
         localStorage.viewCount = parseInt(localStorage.viewCount) + 1;
         document.getElementById("viewCount").textContent = localStorage.viewCount;
-
-        function toggleNav() {
-            const nav = document.getElementById("navMenu");
-            nav.style.display = (nav.style.display === "block") ? "none" : "block";
-        }
 
         async function fetchIssues() {
             const username = "joinliving";
@@ -160,34 +195,4 @@
                 setTimeout(addWatermarkToImages, 1000);
 
             } catch (error) {
-                document.getElementById("content").textContent = "加载失败，请检查 GitHub 配置";
-            }
-        }
-
-        function addWatermarkToImages() {
-            document.querySelectorAll(".watermarked").forEach(img => {
-                const canvas = document.createElement("canvas");
-                const ctx = canvas.getContext("2d");
-
-                img.onload = function () {
-                    canvas.width = img.naturalWidth;
-                    canvas.height = img.naturalHeight;
-
-                    ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-
-                    ctx.font = "20px Arial";
-                    ctx.fillStyle = "rgba(255, 255, 255, 0.6)";
-                    ctx.textAlign = "right";
-
-                    ctx.fillText("山雀大王", canvas.width - 20, canvas.height - 50);
-                    ctx.fillText("oloiyy@163.com", canvas.width - 20, canvas.height - 20);
-
-                    img.src = canvas.toDataURL("image/png");
-                };
-            });
-        }
-
-        fetchIssues();
-    </script>
-</body>
-</html>
+                document.getElement 
