--- a/index.html
+++ b/index.html
@@ -5,259 +5,144 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小狗创作中</title>
     <style>
-        @font-face {
-            font-family: '京华老宋体';
-            src: url('https://your-font-url.woff2') format('woff2'); /* 确保字体可用 */
-        }
-
         body {
-            font-family: '京华老宋体', Arial, sans-serif;
-            background: #fff;
+            font-family: "京华老宋体", serif;
+            background-color: #fff;
+            color: rgb(83, 83, 86);
             text-align: center;
-            margin: 0;
-            padding: 20px;
-            position: relative;
-            color: rgb(83, 83, 86); /* 设置全局字体颜色 */
         }
-
-        h1, h2, h3, p, .work, .content {
-            color: rgb(83, 83, 86);
-        }
-
-        .clock {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            font-size: 16px;
-        }
-
-        .counter {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 16px;
-        }
-
-        /* 顶部分类按钮 */
-        .menu {
-            position: absolute;
-            top: 50px; /* 移动 Pages 菜单，避免与访问数重叠 */
-            right: 10px;
-        }
-
-        .menu button {
-            background: #333;
-            color: #fff;
-            border: none;
-            padding: 8px 12px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .dropdown {
-            display: none;
-            position: absolute;
-            top: 40px;
-            right: 0;
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            border-radius: 5px;
-        }
-
-        .dropdown a {
-            display: block;
-            padding: 10px;
-            text-decoration: none;
-            color: rgb(83, 83, 86);
-        }
-
-        .dropdown a:hover {
-            background: #ddd;
-        }
-
-        /* 分类导航 */
-        .nav {
-            background: #333;
-            padding: 10px;
-            margin-bottom: 20px;
+        .header {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .nav button {
-            margin: 5px;
-            padding: 8px 12px;
-            background: #555;
-            border: none;
-            color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .nav button:hover {
-            background: #777;
-        }
-
-        .post {
-            border-bottom: 1px solid #ddd;
+            justify-content: space-between;
             padding: 10px;
-            margin: 10px auto;
-            width: 90%;
-            max-width: 600px;
-            text-align: left;
-        }
-
-        .post h2 {
             font-size: 18px;
-            margin: 0;
         }
-
-        .post .content {
+        .pages-menu {
+            position: relative;
+            display: inline-block;
+        }
+        .pages-btn {
+            background-color: #333;
+            color: white;
+            padding: 8px;
+            border: none;
+            cursor: pointer;
+        }
+        .pages-content {
             display: none;
-            white-space: pre-line;
-            margin-top: 10px;
+            position: absolute;
+            background-color: white;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 10;
         }
-
-        .post button {
+        .pages-content a {
+            color: black;
+            padding: 8px;
             display: block;
+            text-decoration: none;
+        }
+        .pages-content a:hover {
+            background-color: #ddd;
+        }
+        .work {
+            margin: 20px auto;
+            padding: 10px;
+            border: 1px solid #ddd;
+            max-width: 600px;
+            background: #f9f9f9;
+        }
+        button {
             margin-top: 5px;
-        }
-
-        .footer {
-            margin-top: 20px;
-            font-size: 14px;
-            color: gray;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 10px auto;
+            padding: 5px 10px;
+            background: #535356;
+            color: white;
+            border: none;
+            cursor: pointer;
         }
     </style>
 </head>
-<body oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
-    <div class="clock" id="clock">时间加载中...</div>
-    <div class="counter">访问量：<span id="viewCount">加载中...</span></div>
-
-    <!-- 分类导航 -->
-    <div class="menu">
-        <button onclick="toggleMenu()">Pages</button>
-        <div class="dropdown" id="menuDropdown"></div>
+<body>
+    <div class="header">
+        <span id="clock"></span>
+        <span>访问量：<span id="visitor-count">0</span></span>
+        <div class="pages-menu">
+            <button class="pages-btn" onclick="togglePages()">Pages</button>
+            <div class="pages-content" id="pages-list"></div>
+        </div>
     </div>
 
-    <div class="nav" id="categoryNav"></div>
-
     <h1>小狗创作中</h1>
-
     <h2>最新作品</h2>
-    <div id="content">加载中...</div>
 
-    <div class="footer">联系方式：oloiyy@163.com</div>
+    <div id="content"></div>
+
+    <p>联系方式：oloiyy@163.com</p>
 
     <script>
         function updateClock() {
-            const now = new Date();
-            document.getElementById('clock').textContent = now.toLocaleTimeString();
+            document.getElementById("clock").innerText = new Date().toLocaleTimeString();
         }
         setInterval(updateClock, 1000);
         updateClock();
 
-        if (!localStorage.viewCount) localStorage.viewCount = 0;
-        localStorage.viewCount = parseInt(localStorage.viewCount) + 1;
-        document.getElementById("viewCount").textContent = localStorage.viewCount;
-
-        function toggleMenu() {
-            const menu = document.getElementById("menuDropdown");
+        function togglePages() {
+            let menu = document.getElementById("pages-list");
             menu.style.display = menu.style.display === "block" ? "none" : "block";
         }
 
-        async function fetchIssues() {
-            const username = "joinliving";
-            const repo = "puppy";
-            const url = `https://api.github.com/repos/${username}/${repo}/issues?state=open`;
+        async function fetchGitHubData() {
+            const repo = "joinliving/puppy";
+            const apiUrl = `https://api.github.com/repos/${repo}/issues?state=open&per_page=100`;
 
             try {
-                const response = await fetch(url);
-                const issues = await response.json();
-                const contentDiv = document.getElementById("content");
-                const categoryNav = document.getElementById("categoryNav");
-                const menuDropdown = document.getElementById("menuDropdown");
+                let response = await fetch(apiUrl);
+                let issues = await response.json();
 
-                contentDiv.innerHTML = "";
-                categoryNav.innerHTML = '<button onclick="showAll()">全部</button>'; // 添加“全部”按钮
-
-                let categories = {};
+                let categories = new Set();
+                let contentDiv = document.getElementById("content");
 
                 issues.forEach(issue => {
-                    const labels = issue.labels.map(label => label.name);
-                    labels.forEach(label => {
-                        if (!categories[label]) categories[label] = [];
-                        categories[label].push(issue);
-                    });
+                    let title = issue.title;
+                    let body = issue.body.replace(/\n/g, "<br>");
+                    let labels = issue.labels.map(label => label.name);
+
+                    labels.forEach(label => categories.add(label));
+
+                    let workDiv = document.createElement("div");
+                    workDiv.className = "work";
+                    workDiv.setAttribute("data-category", labels.join(" "));
+
+                    workDiv.innerHTML = `${title} <button onclick="toggleText(this)">展开正文</button><div style="display:none;">${body}</div>`;
+                    contentDiv.appendChild(workDiv);
                 });
 
-                for (let category in categories) {
-                    const categoryButton = document.createElement("button");
-                    categoryButton.textContent = category;
-                    categoryButton.onclick = function () {
-                        showCategory(category);
-                    };
-                    categoryNav.appendChild(categoryButton);
-                }
-
-                for (let category in categories) {
-                    categories[category].forEach(issue => {
-                        const post = document.createElement("div");
-                        post.classList.add("post");
-                        post.dataset.category = category;
-
-                        const title = document.createElement("h2");
-                        title.textContent = issue.title;
-
-                        const content = document.createElement("div");
-                        content.classList.add("content");
-                        content.innerHTML = issue.body.replace(/\n/g, "<br>").replace(/!\[.*?\]\((.*?)\)/g, '<img src="$1">');
-
-                        const toggleButton = document.createElement("button");
-                        toggleButton.textContent = "展开正文";
-                        toggleButton.onclick = function () {
-                            if (content.style.display === "none" || content.style.display === "") {
-                                content.style.display = "block";
-                                toggleButton.textContent = "收起正文";
-                            } else {
-                                content.style.display = "none";
-                                toggleButton.textContent = "展开正文";
-                            }
-                        };
-
-                        post.appendChild(title);
-                        post.appendChild(toggleButton);
-                        post.appendChild(content);
-                        contentDiv.appendChild(post);
-                    });
-                }
+                updatePagesMenu(Array.from(categories));
             } catch (error) {
-                document.getElementById("content").textContent = "加载失败，请检查 GitHub 配置";
+                console.error("获取 GitHub Issues 失败", error);
             }
         }
 
-        function showCategory(category) {
-            document.querySelectorAll(".post").forEach(post => {
-                post.style.display = post.dataset.category === category ? "block" : "none";
+        function toggleText(button) {
+            let content = button.nextElementSibling;
+            content.style.display = content.style.display === "none" ? "block" : "none";
+        }
+
+        function updatePagesMenu(categories) {
+            let pagesList = document.getElementById("pages-list");
+            pagesList.innerHTML = `<a href="#" onclick="filterCategory('全部')">全部</a>`;
+            categories.forEach(category => {
+                pagesList.innerHTML += `<a href="#" onclick="filterCategory('${category}')">${category}</a>`;
             });
         }
 
-        function showAll() {
-            document.querySelectorAll(".post").forEach(post => {
-                post.style.display = "block";
+        function filterCategory(category) {
+            let works = document.querySelectorAll(".work");
+            works.forEach(work => {
+                work.style.display = category === "全部" || work.getAttribute("data-category").includes(category) ? "block" : "none";
             });
         }
 
-        fetchIssues();
+        fetchGitHubData();
     </script>
 </body>
 </html>
